--- a/Planet.html
+++ b/Planet.html
@@ -222,7 +222,7 @@
         <div class="row image-container">
             <div class="col-md-4 d-flex flex-column align-items-center">
                 <a download="Matahari.jpg" href="https://storage.googleapis.com/a1aa/image/0wurEjGAfSx6LC1SJJHFgPCe4JMPfceSeAngMHMugvxr8ljcC.jpg">
-                    <img alt="Gambar Matahari" src="image/Sun.jpg"/>
+                    <img alt="Gambar Matahari" src="assets/image/Sun.jpg"/>
                 </a>
                 <div class="text-start">
                     <div class="section-title">
@@ -235,7 +235,7 @@
             </div>
             <div class="col-md-4 d-flex flex-column align-items-center">
                 <a download="Merkurius.jpg" href="https://storage.googleapis.com/a1aa/image/2g4p206B0L61ExzUwZVatH3uYmgnf5ey2fkR4ZQvXJqbfyROB.jpg">
-                    <img alt="Gambar Merkurius" src="image/Mercury.jpg"/>
+                    <img alt="Gambar Merkurius" src="assets/image/Mercury.jpg"/>
                 </a>
                 <div class="text-start">
                     <div class="section-title">
@@ -248,7 +248,7 @@
             </div>
             <div class="col-md-4 d-flex flex-column align-items-center">
                 <a download="Venus.jpg" href="https://storage.googleapis.com/a1aa/image/aObJlIVzJBJLIl2ejbrXGfxVeaxEKOcQhCh3FUnqsh1NfyROB.jpg">
-                    <img alt="Gambar Venus" src="image/Venus.jpg"/>
+                    <img alt="Gambar Venus" src="assets/image/Venus.jpg"/>
                 </a>
                 <div class="text-start">
                     <div class="section-title">
@@ -264,7 +264,7 @@
         <div class="row image-container">
             <div class="col-md-4 d-flex flex-column align-items-center">
                 <a download="Bumi.jpg" href="https://storage.googleapis.com/a1aa/image/f1ThUHRej2o24EWve7NwXPcAhzL8ee3oc1dJfnwO6IPo7LH5E.jpg">
-                    <img alt="Gambar Bumi" src="image/Earth.jpg"/>
+                    <img alt="Gambar Bumi" src="assets/image/Earth.jpg"/>
                 </a>
                 <div class="text-start">
                     <div class="section-title">
@@ -277,7 +277,7 @@
             </div>
             <div class="col-md-4 d-flex flex-column align-items-center">
                 <a download="Mars.jpg" href="https://storage.googleapis.com/a1aa/image/AL6psS5Pm0afL61jXkLsuZpJw9fa6d4uzJXH0NbEmncpvckTA.jpg">
-                    <img alt="Gambar Mars" src="image/Mars.jpg"/>
+                    <img alt="Gambar Mars" src="assets/image/Mars.jpg"/>
                 </a>
                 <div class="text-start">
                     <div class="section-title">
@@ -290,7 +290,7 @@
             </div>
             <div class="col-md-4 d-flex flex-column align-items-center">
                 <a download="Jupiter.jpg" href="https://storage.googleapis.com/a1aa/image/vy1YfFPvR7XVG6fBxbyhrfDFPaiD6X5DyENfgUf9Qzhd9ljcC.jpg">
-                    <img alt="Gambar Jupiter" src="image/Jupiter.jpg"/>
+                    <img alt="Gambar Jupiter" src="assets/image/Jupiter.jpg"/>
                 </a>
                 <div class="text-start">
                     <div class="section-title">
@@ -306,7 +306,7 @@
         <div class="row image-container">
             <div class="col-md-4 d-flex flex-column align-items-center">
                 <a download="Saturnus.jpg" href="https://storage.googleapis.com/a1aa/image/0wurEjGAfSx6LC1SJJHFgPCe4JMPfceSeAngMHMugvxr8ljcC.jpg">
-                    <img alt="Gambar Saturnus" src="image/Saturn.jpg"/>
+                    <img alt="Gambar Saturnus" src="assets/image/Saturn.jpg"/>
                 </a>
                 <div class="text-start">
                     <div class="section-title">
@@ -319,7 +319,7 @@
             </div>
             <div class="col-md-4 d-flex flex-column align-items-center">
                 <a download="Uranus.jpg" href="https://storage.googleapis.com/a1aa/image/eoV6sMrSSRUUCKFGTydxBxYF7L2Y1i2OMpIe6l92PHYwvckTA.jpg">
-                    <img alt="Gambar Uranus" src="image/uranus.jpg"/>
+                    <img alt="Gambar Uranus" src="assets/image/uranus.jpg"/>
                 </a>
                 <div class="text-start">
                     <div class="section-title">
@@ -332,7 +332,7 @@
             </div>
             <div class="col-md-4 d-flex flex-column align-items-center">
                 <a download="Neptunus.jpg" href="https://storage.googleapis.com/a1aa/image/K6Mxde8BM42uKCQeY56ufHlgpf4g6LdlHpRfPSPe7q6q6LH5E.jpg">
-                    <img alt="Gambar Neptunus" src="image/neptune.jpg"/>
+                    <img alt="Gambar Neptunus" src="assets/image/neptune.jpg"/>
                 </a>
                 <div class="text-start">
                     <div class="section-title">
